[package]
name = "seize"
version = "0.4.5"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "Fast, efficient, and robust memory reclamation for concurrent data structures."
repository = "https://github.com/ibraheemdev/seize"
keywords = ["lock-free", "atomic", "garbage"]
categories = ["concurrency", "memory-management"]

[dependencies]
sysinfo = "0.28"

[dev-dependencies]
criterion = "0.3.5"
crossbeam-epoch = "0.9.8"
haphazard = { git = "https://github.com/jonhoo/haphazard", rev = "e0e18f60f78652a63aba235be854f87d106c1a1b" }

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "structures_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false
